doc/y.output
   0  $accept : batch_file $end

   1  batch_file : statement_list

   2  statement : dos_command
   3            | compound_statement
   4            | selection_statement
   5            | while_statement
   6            | labelled_statement
   7            | jump_statement
   8            | function_definition
   9            | function_call
  10            | error

  11  $$1 :

  12  $$2 :

  13  function_definition : FDEF identifier $$1 '(' ')' $$2 compound_statement

  14  function_call : function_identifier '(' ')'

  15  labelled_statement : CASE primary_expression ':' statement
  16                     | DEFAULT ':' statement

  17  compound_statement : '{' statement_list '}'
  18                     | '{' '}'

  19  statement_list : statement
  20                 | statement_list statement

  21  selection_statement : IF '(' dos_expression ')' statement
  22                      | IF '(' dos_expression ')' statement ELSE statement

  23  $$3 :

  24  selection_statement : SWITCH '(' primary_expression $$3 ')' statement

  25  $$4 :

  26  while_statement : WHILE $$4 '(' dos_expression ')' statement

  27  jump_statement : BREAK ';'
  28                 | RETURN ';'
  29                 | RETURN primary_expression ';'

  30  dos_expression : logical_AND_expression
  31                 | dos_expression LOG_OR logical_AND_expression

  32  logical_AND_expression : unary_expression
  33                         | logical_AND_expression LOG_AND unary_expression

  34  unary_expression : dos_logical_expression
  35                   | '(' dos_expression ')'
  36                   | '!' unary_expression

  37  dos_logical_expression : ERRORLEVEL GE primary_expression
  38                         | ERRORLEVEL '<' primary_expression
  39                         | ERRORLEVEL EQ primary_expression
  40                         | ERRORLEVEL NE primary_expression
  41                         | EXIST primary_expression
  42                         | primary_expression EQ primary_expression
  43                         | primary_expression NE primary_expression

  44  primary_expression : identifier
  45                     | primary_expression identifier
  46                     | en_var
  47                     | primary_expression en_var
  48                     | param
  49                     | primary_expression param
  50                     | number
  51                     | primary_expression number
  52                     | empty

  53  function_identifier : func_id

state 0
	$accept : . batch_file $end  (0)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	batch_file  goto 13
	statement  goto 14
	statement_list  goto 15
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 1
	statement : error .  (10)

	.  reduce 10


state 2
	function_definition : FDEF . identifier $$1 '(' ')' $$2 compound_statement  (13)

	identifier  shift 24
	.  error


state 3
	function_identifier : func_id .  (53)

	.  reduce 53


state 4
	statement : dos_command .  (2)

	.  reduce 2


state 5
	labelled_statement : CASE . primary_expression ':' statement  (15)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 30


state 6
	labelled_statement : DEFAULT . ':' statement  (16)

	':'  shift 31
	.  error


state 7
	selection_statement : IF . '(' dos_expression ')' statement  (21)
	selection_statement : IF . '(' dos_expression ')' statement ELSE statement  (22)

	'('  shift 32
	.  error


state 8
	selection_statement : SWITCH . '(' primary_expression $$3 ')' statement  (24)

	'('  shift 33
	.  error


state 9
	while_statement : WHILE . $$4 '(' dos_expression ')' statement  (26)
	$$4 : .  (25)

	.  reduce 25

	$$4  goto 34


state 10
	jump_statement : BREAK . ';'  (27)

	';'  shift 35
	.  error


state 11
	jump_statement : RETURN . ';'  (28)
	jump_statement : RETURN . primary_expression ';'  (29)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	';'  shift 36
	.  error

	primary_expression  goto 37


state 12
	compound_statement : '{' . statement_list '}'  (17)
	compound_statement : '{' . '}'  (18)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	'}'  shift 38
	.  error

	statement  goto 14
	statement_list  goto 39
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 13
	$accept : batch_file . $end  (0)

	$end  accept


state 14
	statement_list : statement .  (19)

	.  reduce 19


state 15
	batch_file : statement_list .  (1)
	statement_list : statement_list . statement  (20)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	$end  reduce 1

	statement  goto 40
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 16
	statement : selection_statement .  (4)

	.  reduce 4


state 17
	statement : while_statement .  (5)

	.  reduce 5


state 18
	statement : jump_statement .  (7)

	.  reduce 7


state 19
	statement : compound_statement .  (3)

	.  reduce 3


state 20
	statement : labelled_statement .  (6)

	.  reduce 6


state 21
	statement : function_call .  (9)

	.  reduce 9


state 22
	statement : function_definition .  (8)

	.  reduce 8


state 23
	function_call : function_identifier . '(' ')'  (14)

	'('  shift 41
	.  error


state 24
	function_definition : FDEF identifier . $$1 '(' ')' $$2 compound_statement  (13)
	$$1 : .  (11)

	.  reduce 11

	$$1  goto 42


state 25
	primary_expression : identifier .  (44)

	.  reduce 44


state 26
	primary_expression : en_var .  (46)

	.  reduce 46


state 27
	primary_expression : param .  (48)

	.  reduce 48


state 28
	primary_expression : number .  (50)

	.  reduce 50


state 29
	primary_expression : empty .  (52)

	.  reduce 52


state 30
	labelled_statement : CASE primary_expression . ':' statement  (15)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	':'  shift 47
	.  error


state 31
	labelled_statement : DEFAULT ':' . statement  (16)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	statement  goto 48
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 32
	selection_statement : IF '(' . dos_expression ')' statement  (21)
	selection_statement : IF '(' . dos_expression ')' statement ELSE statement  (22)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	ERRORLEVEL  shift 49
	EXIST  shift 50
	number  shift 28
	empty  shift 29
	'('  shift 51
	'!'  shift 52
	.  error

	dos_expression  goto 53
	primary_expression  goto 54
	dos_logical_expression  goto 55
	logical_AND_expression  goto 56
	unary_expression  goto 57


state 33
	selection_statement : SWITCH '(' . primary_expression $$3 ')' statement  (24)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 58


state 34
	while_statement : WHILE $$4 . '(' dos_expression ')' statement  (26)

	'('  shift 59
	.  error


state 35
	jump_statement : BREAK ';' .  (27)

	.  reduce 27


state 36
	jump_statement : RETURN ';' .  (28)

	.  reduce 28


state 37
	jump_statement : RETURN primary_expression . ';'  (29)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	';'  shift 60
	.  error


state 38
	compound_statement : '{' '}' .  (18)

	.  reduce 18


state 39
	compound_statement : '{' statement_list . '}'  (17)
	statement_list : statement_list . statement  (20)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	'}'  shift 61
	.  error

	statement  goto 40
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 40
	statement_list : statement_list statement .  (20)

	.  reduce 20


state 41
	function_call : function_identifier '(' . ')'  (14)

	')'  shift 62
	.  error


state 42
	function_definition : FDEF identifier $$1 . '(' ')' $$2 compound_statement  (13)

	'('  shift 63
	.  error


state 43
	primary_expression : primary_expression identifier .  (45)

	.  reduce 45


state 44
	primary_expression : primary_expression en_var .  (47)

	.  reduce 47


state 45
	primary_expression : primary_expression param .  (49)

	.  reduce 49


state 46
	primary_expression : primary_expression number .  (51)

	.  reduce 51


state 47
	labelled_statement : CASE primary_expression ':' . statement  (15)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	statement  goto 64
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 48
	labelled_statement : DEFAULT ':' statement .  (16)

	.  reduce 16


state 49
	dos_logical_expression : ERRORLEVEL . GE primary_expression  (37)
	dos_logical_expression : ERRORLEVEL . '<' primary_expression  (38)
	dos_logical_expression : ERRORLEVEL . EQ primary_expression  (39)
	dos_logical_expression : ERRORLEVEL . NE primary_expression  (40)

	GE  shift 65
	EQ  shift 66
	NE  shift 67
	'<'  shift 68
	.  error


state 50
	dos_logical_expression : EXIST . primary_expression  (41)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 69


state 51
	unary_expression : '(' . dos_expression ')'  (35)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	ERRORLEVEL  shift 49
	EXIST  shift 50
	number  shift 28
	empty  shift 29
	'('  shift 51
	'!'  shift 52
	.  error

	dos_expression  goto 70
	primary_expression  goto 54
	dos_logical_expression  goto 55
	logical_AND_expression  goto 56
	unary_expression  goto 57


state 52
	unary_expression : '!' . unary_expression  (36)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	ERRORLEVEL  shift 49
	EXIST  shift 50
	number  shift 28
	empty  shift 29
	'('  shift 51
	'!'  shift 52
	.  error

	primary_expression  goto 54
	dos_logical_expression  goto 55
	unary_expression  goto 71


state 53
	selection_statement : IF '(' dos_expression . ')' statement  (21)
	selection_statement : IF '(' dos_expression . ')' statement ELSE statement  (22)
	dos_expression : dos_expression . LOG_OR logical_AND_expression  (31)

	LOG_OR  shift 72
	')'  shift 73
	.  error


state 54
	dos_logical_expression : primary_expression . EQ primary_expression  (42)
	dos_logical_expression : primary_expression . NE primary_expression  (43)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	EQ  shift 74
	NE  shift 75
	number  shift 46
	.  error


state 55
	unary_expression : dos_logical_expression .  (34)

	.  reduce 34


state 56
	dos_expression : logical_AND_expression .  (30)
	logical_AND_expression : logical_AND_expression . LOG_AND unary_expression  (33)

	LOG_AND  shift 76
	LOG_OR  reduce 30
	')'  reduce 30


state 57
	logical_AND_expression : unary_expression .  (32)

	.  reduce 32


state 58
	selection_statement : SWITCH '(' primary_expression . $$3 ')' statement  (24)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)
	$$3 : .  (23)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	')'  reduce 23

	$$3  goto 77


state 59
	while_statement : WHILE $$4 '(' . dos_expression ')' statement  (26)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	ERRORLEVEL  shift 49
	EXIST  shift 50
	number  shift 28
	empty  shift 29
	'('  shift 51
	'!'  shift 52
	.  error

	dos_expression  goto 78
	primary_expression  goto 54
	dos_logical_expression  goto 55
	logical_AND_expression  goto 56
	unary_expression  goto 57


state 60
	jump_statement : RETURN primary_expression ';' .  (29)

	.  reduce 29


state 61
	compound_statement : '{' statement_list '}' .  (17)

	.  reduce 17


state 62
	function_call : function_identifier '(' ')' .  (14)

	.  reduce 14


state 63
	function_definition : FDEF identifier $$1 '(' . ')' $$2 compound_statement  (13)

	')'  shift 79
	.  error


state 64
	labelled_statement : CASE primary_expression ':' statement .  (15)

	.  reduce 15


state 65
	dos_logical_expression : ERRORLEVEL GE . primary_expression  (37)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 80


state 66
	dos_logical_expression : ERRORLEVEL EQ . primary_expression  (39)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 81


state 67
	dos_logical_expression : ERRORLEVEL NE . primary_expression  (40)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 82


state 68
	dos_logical_expression : ERRORLEVEL '<' . primary_expression  (38)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 83


state 69
	dos_logical_expression : EXIST primary_expression .  (41)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 41
	LOG_AND  reduce 41
	')'  reduce 41


state 70
	dos_expression : dos_expression . LOG_OR logical_AND_expression  (31)
	unary_expression : '(' dos_expression . ')'  (35)

	LOG_OR  shift 72
	')'  shift 84
	.  error


state 71
	unary_expression : '!' unary_expression .  (36)

	.  reduce 36


state 72
	dos_expression : dos_expression LOG_OR . logical_AND_expression  (31)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	ERRORLEVEL  shift 49
	EXIST  shift 50
	number  shift 28
	empty  shift 29
	'('  shift 51
	'!'  shift 52
	.  error

	primary_expression  goto 54
	dos_logical_expression  goto 55
	logical_AND_expression  goto 85
	unary_expression  goto 57


state 73
	selection_statement : IF '(' dos_expression ')' . statement  (21)
	selection_statement : IF '(' dos_expression ')' . statement ELSE statement  (22)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	statement  goto 86
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 74
	dos_logical_expression : primary_expression EQ . primary_expression  (42)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 87


state 75
	dos_logical_expression : primary_expression NE . primary_expression  (43)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	number  shift 28
	empty  shift 29
	.  error

	primary_expression  goto 88


state 76
	logical_AND_expression : logical_AND_expression LOG_AND . unary_expression  (33)

	identifier  shift 25
	en_var  shift 26
	param  shift 27
	ERRORLEVEL  shift 49
	EXIST  shift 50
	number  shift 28
	empty  shift 29
	'('  shift 51
	'!'  shift 52
	.  error

	primary_expression  goto 54
	dos_logical_expression  goto 55
	unary_expression  goto 89


state 77
	selection_statement : SWITCH '(' primary_expression $$3 . ')' statement  (24)

	')'  shift 90
	.  error


state 78
	while_statement : WHILE $$4 '(' dos_expression . ')' statement  (26)
	dos_expression : dos_expression . LOG_OR logical_AND_expression  (31)

	LOG_OR  shift 72
	')'  shift 91
	.  error


state 79
	function_definition : FDEF identifier $$1 '(' ')' . $$2 compound_statement  (13)
	$$2 : .  (12)

	.  reduce 12

	$$2  goto 92


state 80
	dos_logical_expression : ERRORLEVEL GE primary_expression .  (37)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 37
	LOG_AND  reduce 37
	')'  reduce 37


state 81
	dos_logical_expression : ERRORLEVEL EQ primary_expression .  (39)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 39
	LOG_AND  reduce 39
	')'  reduce 39


state 82
	dos_logical_expression : ERRORLEVEL NE primary_expression .  (40)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 40
	LOG_AND  reduce 40
	')'  reduce 40


state 83
	dos_logical_expression : ERRORLEVEL '<' primary_expression .  (38)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 38
	LOG_AND  reduce 38
	')'  reduce 38


state 84
	unary_expression : '(' dos_expression ')' .  (35)

	.  reduce 35


state 85
	dos_expression : dos_expression LOG_OR logical_AND_expression .  (31)
	logical_AND_expression : logical_AND_expression . LOG_AND unary_expression  (33)

	LOG_AND  shift 76
	LOG_OR  reduce 31
	')'  reduce 31


86: shift/reduce conflict (shift 93, reduce 21) on ELSE
state 86
	selection_statement : IF '(' dos_expression ')' statement .  (21)
	selection_statement : IF '(' dos_expression ')' statement . ELSE statement  (22)

	ELSE  shift 93
	$end  reduce 21
	error  reduce 21
	FDEF  reduce 21
	func_id  reduce 21
	dos_command  reduce 21
	CASE  reduce 21
	DEFAULT  reduce 21
	IF  reduce 21
	SWITCH  reduce 21
	WHILE  reduce 21
	BREAK  reduce 21
	RETURN  reduce 21
	'{'  reduce 21
	'}'  reduce 21


state 87
	dos_logical_expression : primary_expression EQ primary_expression .  (42)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 42
	LOG_AND  reduce 42
	')'  reduce 42


state 88
	dos_logical_expression : primary_expression NE primary_expression .  (43)
	primary_expression : primary_expression . identifier  (45)
	primary_expression : primary_expression . en_var  (47)
	primary_expression : primary_expression . param  (49)
	primary_expression : primary_expression . number  (51)

	identifier  shift 43
	en_var  shift 44
	param  shift 45
	number  shift 46
	LOG_OR  reduce 43
	LOG_AND  reduce 43
	')'  reduce 43


state 89
	logical_AND_expression : logical_AND_expression LOG_AND unary_expression .  (33)

	.  reduce 33


state 90
	selection_statement : SWITCH '(' primary_expression $$3 ')' . statement  (24)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	statement  goto 94
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 91
	while_statement : WHILE $$4 '(' dos_expression ')' . statement  (26)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	statement  goto 95
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 92
	function_definition : FDEF identifier $$1 '(' ')' $$2 . compound_statement  (13)

	'{'  shift 12
	.  error

	compound_statement  goto 96


state 93
	selection_statement : IF '(' dos_expression ')' statement ELSE . statement  (22)

	error  shift 1
	FDEF  shift 2
	func_id  shift 3
	dos_command  shift 4
	CASE  shift 5
	DEFAULT  shift 6
	IF  shift 7
	SWITCH  shift 8
	WHILE  shift 9
	BREAK  shift 10
	RETURN  shift 11
	'{'  shift 12
	.  error

	statement  goto 97
	selection_statement  goto 16
	while_statement  goto 17
	jump_statement  goto 18
	compound_statement  goto 19
	labelled_statement  goto 20
	function_call  goto 21
	function_definition  goto 22
	function_identifier  goto 23


state 94
	selection_statement : SWITCH '(' primary_expression $$3 ')' statement .  (24)

	.  reduce 24


state 95
	while_statement : WHILE $$4 '(' dos_expression ')' statement .  (26)

	.  reduce 26


state 96
	function_definition : FDEF identifier $$1 '(' ')' $$2 compound_statement .  (13)

	.  reduce 13


state 97
	selection_statement : IF '(' dos_expression ')' statement ELSE statement .  (22)

	.  reduce 22


State 86 contains 1 shift/reduce conflict.


34 terminals, 21 nonterminals
54 grammar rules, 98 states
